<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_space"
        android:layout_marginStart="@dimen/left_right_space"
        android:layout_marginTop="@dimen/gap_middle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/left_right_space"
        android:layout_marginStart="@dimen/left_right_space"
        android:layout_marginTop="@dimen/gap_middle"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/score_container"
            style="@style/score_bg_style">

            <TextView
                android:id="@+id/score_title"
                style="@style/score_title_display"
                android:text="@string/score_title" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/score"
                    style="@style/score_value_display"
                    android:text="0" />

                <TextView
                    android:id="@+id/score_add"
                    style="@style/score_value_display"
                    android:textColor="@color/score_add_color"
                    android:text="0"
                    android:visibility="gone"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout style="@style/score_bg_style">

            <TextView
                android:id="@+id/record_title"
                style="@style/score_title_display"
                android:text="@string/record_title" />

            <TextView
                android:id="@+id/record"
                style="@style/score_value_display"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_space"
        android:layout_marginStart="@dimen/left_right_space"
        android:layout_marginTop="@dimen/gap_middle"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/encouraging_words_string"
            android:textSize="18sp" />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/new_game_string"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <kelon.kelon2048game.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/left_right_space"></kelon.kelon2048game.GameView>

    <!--添加万普广告 begin-->
    <LinearLayout android:id="@+id/AdLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"/>
    <!--添加万普广告 end-->
</LinearLayout>
